# bevy_text_mesh

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
assets/fonts/: README.md
examples/: 2d_text.rs  3d_scene.rs  performance.rs  simple.rs  text_variants.rs
src/: font_loader.rs  lib.rs  mesh_cache.rs  mesh_data_generator.rs  mesh_system.rs  text_mesh.rs
