[package]
name = "bevy_text_mesh"
version = "0.0.2"
edition = "2018"
description = "A bevy 3D text mesh generator for displaying text"
repository = "https://github.com/blaind/bevy_text_mesh"
keywords = ["bevy"]
categories = [
    "game-engines"
]
license = "MIT"
readme = "README.md"
resolver="2"

[dependencies]
ttf2mesh = "0.2.0"
bitflags = "1.2"
anyhow = "1.0"
glyph_brush_layout = "0.2.3"

[dependencies.bevy]
version = "0.6.0"
default-features = false

[dev-dependencies]
rand = "0.8.4"

[dev-dependencies.bevy]
version = "0.6.0"
default-features = false
features = [
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
]

[features]
default = []
unstable = []
