[package]
name = "bevy_text_mesh"
version = "0.5.0"
edition = "2021"
description = "A bevy 3D text mesh generator for displaying text"
repository = "https://github.com/blaind/bevy_text_mesh"
keywords = ["bevy"]
categories = [
    "game-engines"
]
license = "MIT"
readme = "README.md"

[dependencies]
ttf2mesh = "0.2.0"
bitflags = "2.0"
anyhow = "1.0"
glyph_brush_layout = "0.2.3"

[dependencies.bevy]
version = "0.9.0"
default-features = false
features = ["render", "bevy_asset"]

[dev-dependencies]
rand = "0.8.4"

[dev-dependencies.bevy]
version = "0.9.0"
default-features = false
features = [
  "bevy_winit",
  "render",
  "x11",
]

[features]
default = []
unstable = []
